[package]
name = "rustscript-pingora-gateway-policy"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
pd-host-function = { path = "../rustscript/pd-host-function" }
pingora = "0.8.1"
vm = { package = "pd-vm", path = "../rustscript", default-features = false, features = ["runtime"] }

[dev-dependencies]
pretty_assertions = "1"
